服务端html格式日志增加显示：客户端ip 调用位置 UserID

--- a/Service/src/Dt.Core/Res/Admin.html
+++ b/Service/src/Dt.Core/Res/Admin.html
@@ -434,7 +434,11 @@
                     }
 
                     if ($("divLog").style.visibility == "visible")
+                    {
+                        var div = $("logContent");
+                        div.scrollTop = div.scrollHeight;
                         receiveLog();
+                    }
                 }
             };
             logRequest.send();
