默认首页基本功能

--- a/Service/src/Dt.Cm/Res/Home.html
+++ b/Service/src/Dt.Cm/Res/Home.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <style>
-        a, b, body, div, font, h1, h2, h3, h4, i, input, lp, select, td, u {
+        a, b, body, div, font {
             font-family: Segoe UI Variable Text, 'Segoe UI', system-ui, -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
             font-size: 16px;
         }
+
         a {
             color: #1ba1e2;
             text-decoration: none;
@@ -61,6 +62,7 @@
 
         .row {
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             margin: 0 0 0.5rem 0;
         }
@@ -69,7 +71,6 @@
             display: block;
             padding: 0rem 2rem 0 0;
         }
-        
     </style>
     <script>
         // 解压gzip，https://cdn.bootcss.com/pako/1.0.9/pako_inflate.min.js
@@ -97,7 +98,10 @@
             <div id="svc" class="card_body"></div>
         </div>
         <div class="card">
-            <label class="card_header">模型文件</label>
+            <div class="card_header">
+                <label>模型文件</label>
+                <a onclick="updateAllModel()" href="javascript:void(0);">更新所有</a>
+            </div>
             <div id="sqlite" class="card_body"></div>
         </div>
     </div>
@@ -122,6 +126,30 @@
             });
         }
 
+        function updateAllModel()
+        {
+            if (confirm("确认要更新所有模型文件吗？") == false)
+                return;
+
+            call('["","SysKernel.UpdateAllSqliteFile"]').then(function (txt)
+            {
+                window.location.href = location.href.substr(0, location.href.lastIndexOf("/")) + "/.output";
+                return false;
+            });
+        }
+
+        function updateModel(model)
+        {
+            if (confirm("确认要更新 " + model + " 的模型文件吗？") == false)
+                return;
+
+            call('["","SysKernel.UpdateSqliteFile", "' + model + '"]').then(function (txt)
+            {
+                window.location.href = location.href.substr(0, location.href.lastIndexOf("/")) + "/.output";
+                return false;
+            });
+        }
+
         function $(id)
         {
             return document.getElementById(id);
@@ -142,48 +170,6 @@
                         resolve(readFrame(xhr.response));
                 };
                 xhr.send(writeFrame(content));
-            });
-        }
-
-        function load(p_request, p_isHtml)
-        {
-            call(p_request).then(function (txt)
-            {
-                var result = JSON.parse(txt);
-                if (result.length == 3)
-                {
-                    if (p_isHtml)
-                        $("content").innerHTML = result[2];
-                    else
-                        $("content").innerText = result[2];
-                }
-                else
-                {
-                    $("content").innerText = txt;
-                }
-                saveState();
-                return false;
-            });
-        }
-
-        function onTest()
-        {
-            call($("methodCall").value).then(function (txt)
-            {
-                var result = JSON.parse(txt);
-                if (result.length == 3)
-                {
-                    $("tdTitle").innerText = (result[0] == 0 ? "成功，耗时" : "调用失败！耗时") + result[1] + "毫秒";
-                    if (Object.prototype.toString.call(result[2]) === "[object String]")
-                        $("tdResult").innerText = result[2];
-                    else
-                        $("tdResult").innerText = formatJson(JSON.stringify(result[2]));
-                }
-                else
-                {
-                    $("tdResult").innerText = formatJson(txt);
-                }
-                saveState();
             });
         }
 
