--- a/Service/src/Dt.Cm/Res/Home.html
+++ b/Service/src/Dt.Cm/Res/Home.html
@@ -86,6 +86,7 @@
         <div class="card">
             <div class="card_header">
                 <label>安装包</label>
+                <a href="https://daoting.github.io/dt-docs/99%E5%8F%91%E5%B8%83%E9%83%A8%E7%BD%B2/2win%E5%BA%94%E7%94%A8/" target="blank\">安装教程</a>
                 <a href="./pkg" target="blank">所有安装包</a>
             </div>
             <div id="pkg" class="card_body"></div>
